--- a/package.json
+++ b/package.json
@@ -11,27 +11,35 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.6",
+    "@emotion/core": "^10.0.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-plugin-typescript-checker": "^1.0.3",
+    "gatsby-plugin-typography": "^2.2.5",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "typescript": "^3.2.2"
+    "react-typography": "^0.16.18",
+    "typescript": "^3.2.2",
+    "typography": "^0.16.18"
   },
   "devDependencies": {
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/typography": "^0.16.2",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0"
   }
