--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
+    "lodash.deburr": "^4.1.0",
+    "lodash.kebabcase": "^4.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
