--- a/package.json
+++ b/package.json
@@ -28,20 +28,28 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "slate": "^0.44.9",
+    "slate-react": "^0.21.15",
     "typescript": "^3.2.2",
     "typography": "^0.16.18"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/slate": "^0.43.8",
+    "@types/slate-react": "^0.20.3",
     "@types/typography": "^0.16.2",
+    "babel-plugin-prismjs": "^1.0.2",
+    "babel-preset-gatsby": "^0.1.6",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0"
   }
