--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.sortedindex": "^4.1.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0-alpha.1",
@@ -40,6 +41,7 @@
     "typography": "^0.16.18"
   },
   "devDependencies": {
+    "@types/lodash.sortedindex": "^4.1.4",
     "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.18",
