--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "shallowequal": "^1.1.0",
     "slate": "^0.44.9",
     "slate-react": "^0.21.15",
     "typescript": "^3.2.2",
@@ -47,6 +48,7 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/shallowequal": "^1.1.0",
     "@types/slate": "^0.43.8",
     "@types/slate-react": "^0.20.3",
     "@types/typography": "^0.16.2",
