--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
+    "immutable": "^3.8.2",
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.sortedindex": "^4.1.0",
+    "memoizee": "^0.4.14",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0-alpha.1",
@@ -43,7 +45,9 @@
     "worker-loader": "^2.0.0"
   },
   "devDependencies": {
+    "@types/immutable": "^3.8.7",
     "@types/lodash.sortedindex": "^4.1.4",
+    "@types/memoizee": "^0.4.2",
     "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.18",
