--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "requestidlecallback": "^0.3.0",
     "shallowequal": "^1.1.0",
     "slate": "^0.44.9",
     "slate-react": "^0.21.15",
