--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.6",
     "@emotion/core": "^10.0.6",
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.0.98",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-manifest": "^2.0.9",
@@ -39,12 +39,14 @@
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
+    "rehype-react": "^3.1.0",
     "requestidlecallback": "^0.3.0",
     "shallowequal": "^1.1.0",
     "slate": "^0.44.9",
     "slate-react": "^0.21.15",
     "typescript": "^3.2.2",
     "typography": "^0.16.18",
+    "unist-util-visit": "^1.4.0",
     "vscode-textmate": "^4.0.1",
     "worker-loader": "^2.0.0"
   },
@@ -62,9 +64,13 @@
     "@types/slate-react": "^0.20.3",
     "@types/typography": "^0.16.2",
     "@types/webpack": "^4.4.23",
+    "@types/webpack-merge": "^4.1.3",
     "babel-plugin-prismjs": "^1.0.2",
     "babel-preset-gatsby": "^0.1.6",
+    "gatsby-cli": "^2.4.8",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "webpack-merge": "^4.2.1"
   }
 }
