Start cleaning things up

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-plugin-typescript-checker": "^1.0.3",
     "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-remark-katex": "^3.0.1",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "immutable": "^3.8.2",
+    "katex": "^0.10.0",
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.sortedindex": "^4.1.0",
