--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
       "name": "Debug Build",
       "program": "${workspaceFolder}/node_modules/.bin/gatsby",
       "args": ["build"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Develop",
+      "program": "${workspaceFolder}/node_modules/.bin/gatsby",
+      "args": ["develop"]
     }
   ]
 }
