Clean stuff up, don’t load onigasm until it’s used

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "jsx": "react",
     "types": [
-      "@emotion/core"
+      "@emotion/core",
+      "@types/node"
     ]
   }
 }
