--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/immutable": "^3.8.7",
     "@types/lodash.sortedindex": "^4.1.4",
     "@types/memoizee": "^0.4.2",
+    "@types/node": "^10.12.19",
     "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.18",
@@ -70,6 +71,7 @@
     "babel-plugin-prismjs": "^1.0.2",
     "babel-preset-gatsby": "^0.1.6",
     "gatsby-cli": "^2.4.8",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0",
