Add QuickInfo client side

--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.6",
     "@emotion/core": "^10.0.6",
-    "gatsby": "^2.0.98",
-    "gatsby-image": "^2.0.20",
+    "gatsby": "^2.0.106",
+    "gatsby-image": "^2.0.29",
     "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
+    "gatsby-plugin-manifest": "^2.0.15",
+    "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-typescript": "^2.0.3",
+    "gatsby-plugin-sharp": "^2.0.19",
+    "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typescript-checker": "^1.0.3",
-    "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-plugin-typography": "^2.2.6",
     "gatsby-remark-katex": "^3.0.1",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-remark": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.1.8",
+    "gatsby-source-filesystem": "^2.0.18",
+    "gatsby-transformer-remark": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.1.13",
     "immutable": "^3.8.2",
     "katex": "^0.10.0",
     "lodash.deburr": "^4.1.0",
@@ -46,27 +46,30 @@
     "shallowequal": "^1.1.0",
     "slate": "^0.44.9",
     "slate-react": "^0.21.15",
-    "typescript": "^3.2.2",
+    "typescript": "^3.2.4",
     "typography": "^0.16.18",
     "unist-util-visit": "^1.4.0",
     "vscode-textmate": "^4.0.1",
     "worker-loader": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/generator": "^7.3.0",
+    "@babel/parser": "^7.3.1",
+    "@babel/types": "^7.3.0",
     "@types/immutable": "^3.8.7",
     "@types/lodash.sortedindex": "^4.1.4",
     "@types/memoizee": "^0.4.2",
     "@types/node": "^10.12.19",
     "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
-    "@types/react": "^16.7.18",
+    "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
     "@types/shallowequal": "^1.1.0",
     "@types/slate": "^0.43.8",
     "@types/slate-react": "^0.20.3",
     "@types/typography": "^0.16.2",
-    "@types/webpack": "^4.4.23",
+    "@types/webpack": "^4.4.24",
     "@types/webpack-merge": "^4.1.3",
     "babel-plugin-prismjs": "^1.0.2",
     "babel-preset-gatsby": "^0.1.6",
