--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-preset-gatsby": "^0.1.6",
     "gatsby-cli": "^2.4.8",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
+    "js-yaml": "^3.12.1",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0",
