--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-async-hook": "^1.0.0",
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
+    "react-transition-group": "^2.5.3",
     "react-typography": "^0.16.18",
     "rehype-react": "^3.1.0",
     "requestidlecallback": "^0.3.0",
@@ -65,6 +66,7 @@
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-transition-group": "^2.0.15",
     "@types/shallowequal": "^1.1.0",
     "@types/slate": "^0.43.8",
     "@types/slate-react": "^0.20.3",
