--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "jsx": "react",
     "types": [
-      "@emotion/core"
+      "@emotion/core",
+      "@types/google.analytics"
     ]
   },
   "exclude": [
