--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "deploy": "node scripts/deploy-staging.js"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.6",
     "@emotion/core": "^10.0.6",
+    "aws-sdk": "^2.395.0",
     "gatsby": "^2.0.106",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-emotion": "^4.0.1",
@@ -20,6 +21,7 @@
     "gatsby-plugin-manifest": "^2.0.15",
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-s3": "^0.2.2",
     "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typescript-checker": "^1.0.3",
@@ -28,12 +30,15 @@
     "gatsby-source-filesystem": "^2.0.18",
     "gatsby-transformer-remark": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.13",
+    "glob": "^7.1.3",
     "immutable": "^3.8.2",
     "katex": "^0.10.0",
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.sortedindex": "^4.1.0",
     "memoizee": "^0.4.14",
+    "mime": "^2.4.0",
+    "minimatch": "^3.0.4",
     "onigasm": "^2.2.1",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
