--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.395.0",
     "gatsby": "^2.0.106",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-catch-links": "^2.0.10",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-google-analytics": "^2.0.13",
