--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash.deburr": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.sortedindex": "^4.1.0",
+    "lodash.throttle": "^4.1.1",
     "memoizee": "^0.4.14",
     "mime": "^2.4.0",
     "minimatch": "^3.0.4",
@@ -68,6 +69,7 @@
     "@types/google.analytics": "0.0.39",
     "@types/immutable": "^3.8.7",
     "@types/lodash.sortedindex": "^4.1.4",
+    "@types/lodash.throttle": "^4.1.4",
     "@types/memoizee": "^0.4.2",
     "@types/node": "^10.12.19",
     "@types/prismjs": "^1.9.0",
