--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typescript-checker": "^1.0.3",
     "gatsby-plugin-typography": "^2.2.6",
+    "gatsby-remark-images": "^3.0.4",
     "gatsby-remark-katex": "^3.0.1",
+    "gatsby-remark-static-images": "^1.1.0",
     "gatsby-source-filesystem": "^2.0.18",
     "gatsby-transformer-remark": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.13",
