--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "gatsby-plugin-catch-links": "^2.0.10",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-favicon": "^3.1.5",
+    "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-google-analytics": "^2.0.13",
     "gatsby-plugin-manifest": "^2.0.15",
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-s3": "^0.2.2",
     "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typescript-checker": "^1.0.3",
