Get all the code examples working

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "shallowequal": "^1.1.0",
     "slate": "^0.44.9",
     "slate-react": "^0.21.15",
-    "typescript": "^3.5.0-rc",
+    "typescript": "^3.5.3",
     "typography": "^0.16.18",
     "unist-util-visit": "^1.4.0",
     "vscode-textmate": "^4.0.1",
@@ -77,8 +77,8 @@
     "@types/node": "^10.12.19",
     "@types/prismjs": "^1.9.0",
     "@types/prop-types": "^15.5.8",
-    "@types/react": "^16.7.22",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-transition-group": "^2.0.15",
     "@types/shallowequal": "^1.1.0",
