--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typescript-checker": "^1.0.3",
     "gatsby-plugin-typography": "^2.2.6",
+    "gatsby-remark-autolink-headers": "^2.1.3",
     "gatsby-remark-images": "^3.0.4",
     "gatsby-remark-katex": "^3.0.1",
     "gatsby-remark-static-images": "^1.1.0",
