--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "start": "npm run develop",
-    "deploy:staging": "node scripts/deploy-staging.js",
-    "deploy:production": "node scripts/deploy-production.js"
+    "start": "npm run develop"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.6",
     "@emotion/core": "^10.0.6",
-    "aws-sdk": "^2.395.0",
     "gatsby": "^2.0.106",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-catch-links": "^2.1.0",
@@ -35,7 +32,6 @@
     "gatsby-source-filesystem": "^2.0.18",
     "gatsby-transformer-remark": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.13",
-    "glob": "^7.1.3",
     "immutable": "^3.8.2",
     "katex": "^0.10.0",
     "lodash.deburr": "^4.1.0",
@@ -43,8 +39,6 @@
     "lodash.sortedindex": "^4.1.0",
     "lodash.throttle": "^4.1.1",
     "memoizee": "^0.4.14",
-    "mime": "^2.4.0",
-    "minimatch": "^3.0.4",
     "onigasm": "^2.2.1",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
