--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gatsby-remark-autolink-headers": "^2.1.3",
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-katex": "^3.1.2",
-    "gatsby-remark-static-images": "^1.1.0",
+    "gatsby-remark-static-images": "andrewbranch/gatsby-remark-static-images#dist",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.5",
     "gatsby-transformer-sharp": "^2.2.3",
