--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
+		"@11ty/eleventy-img": "^3.1.8",
 		"@11ty/eleventy-plugin-bundle": "^1.0.4",
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
 		"@unocss/cli": "^0.57.2",
