--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
 		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-img": "^3.1.8",
 		"@11ty/eleventy-plugin-bundle": "^1.0.4",
+		"@ryanxcharles/markdown-it-katex": "^4.0.2",
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
 		"@unocss/cli": "^0.57.2",
 		"@unocss/preset-uno": "^0.57.2",
 		"@unocss/reset": "^0.57.2",
+		"katex": "^0.16.9",
+		"markdown-it-footnote": "^3.0.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
 		"unocss": "^0.57.2"
