--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"@ryanxcharles/markdown-it-katex": "^4.0.2",
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
 		"@unocss/cli": "^0.57.2",
-		"@unocss/preset-uno": "^0.57.2",
 		"@unocss/reset": "^0.57.2",
+		"image-size": "*",
 		"katex": "^0.16.9",
 		"markdown-it-footnote": "^3.0.3",
 		"npm-run-all": "^4.1.5",
