--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@unocss/reset": "^0.57.2",
 		"image-size": "*",
 		"katex": "^0.16.9",
+		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-footnote": "^3.0.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
