--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"katex": "^0.16.9",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-footnote": "^3.0.3",
+		"markdown-it-shiki": "^0.9.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
+		"shiki": "^0.14.5",
 		"unocss": "^0.57.2"
 	}
 }
