--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
 		"@unocss/cli": "^0.57.2",
 		"@unocss/reset": "^0.57.2",
+		"eleventy-plugin-gen-favicons": "^1.1.2",
 		"image-size": "*",
 		"katex": "^0.16.9",
 		"markdown-it-anchor": "^8.6.7",
