--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-img": "^3.1.8",
 		"@11ty/eleventy-plugin-bundle": "^1.0.4",
+		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@iconify-json/mdi": "^1.1.55",
 		"@ryanxcharles/markdown-it-katex": "^4.0.2",
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
