Post: Is nodenext right for libraries that don’t target Node.js

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 		"@shopify/prettier-plugin-liquid": "^1.3.4",
 		"@unocss/cli": "^0.57.2",
 		"@unocss/reset": "^0.57.2",
+		"eleventy-plugin-embed-everything": "^1.17.0",
 		"eleventy-plugin-gen-favicons": "^1.1.2",
 		"image-size": "*",
 		"katex": "^0.16.9",
+		"markdown-it": "^13.0.2",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-footnote": "^3.0.3",
 		"markdown-it-shiki": "^0.9.0",
