--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eleventy-plugin-gen-favicons": "^1.1.2",
 		"image-size": "*",
 		"katex": "^0.16.9",
+		"kdl": "github:kdl-org/vscode-kdl",
 		"markdown-it": "^13.0.2",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-footnote": "^3.0.3",
@@ -33,6 +34,7 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.0.3",
 		"shikiji": "^0.9.11",
+		"shikiji-transformers": "^0.9.11",
 		"unocss": "^0.57.2"
 	}
 }
